# cobalt

./: .appveyor.yml  .clang-format  .codespellignorelines  .coveragerc  .git-blame-ignore-revs  .gitignore  .gitmodules  .gitmodules_conflict  .gn  .pre-commit-config.yaml  .pylintrc  .vpython3  ;  ;w  AUTHORS  BUILD.gn  BUILD_STATUS.md  CNAME  CONTRIBUTING.md  DEPS  Dockerfile  LICENSE  Makefile  OWNERS  README  README.chromium  README.md  SECURITY.md  SESSION_SUMMARY.md  _env.py  action_runner_win.cc  algo_test.py  all_histograms.txt  analyze_commit_sizes.py  android_startup_test.py  automated_commits_m114.json  branches-ahead-of-youtube-main.md  build.sh  build_linux.sh  call_stack_profile.proto  (+172 more)
build_overrides/: angle.gni  build.gni  crypto.gni  gtest.gni  partition_alloc.gni  tint.gni
cobalt/: .clang-format  .gitattributes  .gitignore  BUILD.gn  BUILD_STATUS.md  CHANGELOG.md  DEPS  LASTCHANGE.chromium  SkFontMgr_cobalt.cpp  SkFontMgr_cobalt.h  base_dump_symbols.cc  cobalt.cc  cobalt.h  cobalt.sublime-project  cobalt_browser_interface_binders.cc  cobalt_browser_interface_binders.h  cobalt_content_browser_client.cc  cobalt_content_browser_client.h  cobalt_content_renderer_client.cc  cobalt_content_renderer_client.h  cobalt_contents.cc  cobalt_contents.h  cobalt_main_delegate.cc  cobalt_main_delegate.h  cobalt_paths.cc  cobalt_paths.h  cobalt_shell.cc  cobalt_shell.h  cobalt_switch_defaults.cc  cobalt_switch_defaults.h  cobalt_switch_defaults_linux.cc  cobalt_switch_defaults_linux.h  cobalt_switch_defaults_linux_test.cc  cobalt_switch_defaults_test.cc  cobalt_web_contents_observer.cc  cobalt_web_contents_observer.h  export.h  generate_features.py  media_dump_symbols.cc  net_dump_symbols.cc  (+7 more)
cobalt/accessibility/: accessibility.gyp  accessibility_test.gyp  screen_reader.cc  screen_reader.h  screen_reader_tests.cc  starboard_tts_engine.cc  starboard_tts_engine.h  text_alternative.cc  text_alternative.h  tts_engine.h  tts_logger.h
cobalt/account/: BUILD.gn  account.gyp  account_event.h  account_manager.cc  account_manager.h  account_manager_stub.cc  account_manager_stub.h  user_authorizer.h
cobalt/android/: BUILD.gn  app_event_bridge.cc  cobalt_library_loader.cc  cobalt_view_render_view.cc  cobalt_view_render_view.h  kimono_snapshot.json  kimono_snapshot.md  manifest.gni  shell_manager.cc  shell_manager.h  shell_platform_delegate_android.cc  shell_web_contents_view_delegate_android.cc
cobalt/aosp/: BUILD.gn  modular_apk.gni
cobalt/app/: app_event_delegate.cc  app_event_delegate.h  app_event_delegate_unittest.cc  app_event_runner.cc  app_event_runner.h  app_event_runner_unittest.cc  app_lifecycle_delegate.cc  app_lifecycle_delegate.h  app_lifecycle_delegate_unittest.cc  cobalt.cc  cobalt_crash_reporter_client.cc  cobalt_crash_reporter_client.h  cobalt_main_delegate.cc  cobalt_main_delegate.h  cobalt_switch_defaults.cc  cobalt_switch_defaults.h  cobalt_switch_defaults_linux.cc  cobalt_switch_defaults_linux.h  cobalt_switch_defaults_linux_test.cc  cobalt_switch_defaults_starboard.cc  cobalt_switch_defaults_starboard.h  cobalt_switch_defaults_starboard_test.cc  cobalt_switch_defaults_test.cc  cobalt_switch_defaults_tvos.cc  main.mm  sb_event_handle.cc
cobalt/audio/: AudioBuffer.idl  AudioBufferSourceNode.idl  AudioContext.idl  AudioDestinationNode.idl  AudioNode.idl  BUILD.gn  async_audio_decoder.cc  async_audio_decoder.h  audio.gyp  audio_buffer.cc  audio_buffer.h  audio_buffer.idl  audio_buffer_source_node.cc  audio_buffer_source_node.h  audio_buffer_source_node.idl  audio_context.cc  audio_context.h  audio_context.idl  audio_destination_node.cc  audio_destination_node.h  audio_destination_node.idl  audio_device.cc  audio_device.h  audio_file_reader.cc  audio_file_reader.h  audio_file_reader_wav.cc  audio_file_reader_wav.h  audio_helpers.h  audio_node.cc  audio_node.h  audio_node.idl  audio_node_channel_count_mode.idl  audio_node_channel_interpretation.idl  audio_node_input.cc  audio_node_input.h  audio_node_input_output_test.cc  audio_node_output.cc  audio_node_output.h  audio_test.gyp
cobalt/base/: BUILD.gn  accessibility_caption_settings_changed_event.h  accessibility_settings_changed_event.h  accessibility_text_to_speech_settings_changed_event.h  address_sanitizer.h  application_event.h  application_state.h  base.gyp  c_val.cc  c_val.h  c_val_collection_entry_stats.h  c_val_collection_entry_stats_test.cc  c_val_collection_timer_stats.h  c_val_collection_timer_stats_test.cc  c_val_test.cc  c_val_time_interval_entry_stats.h  c_val_time_interval_timer.h  (+76 more)
media/: BUILD.gn  METADATA  README.md  media.gyp  media_buildflags.h  media_options.gni  media_untrusted.gyp  unit_tests_bundle_data.filelist
nb/: BUILD.gn  README.md  allocator.h  allocator_decorator.cc  allocator_decorator.h  atomic.h  bidirectional_fit_reuse_allocator.cc  bidirectional_fit_reuse_allocator.h  bidirectional_fit_reuse_allocator_test.cc  bit_cast.h  concurrent_map.h  concurrent_map_test.cc  concurrent_ptr.h  concurrent_ptr_test.cc  cpp14oncpp11.h  first_fit_reuse_allocator.cc  first_fit_reuse_allocator.h  first_fit_reuse_allocator_test.cc  fixed_no_free_allocator.cc  fixed_no_free_allocator.h  fixed_no_free_allocator_test.cc  hash.cc  hash.h  lexical_cast.h  lexical_cast_test.cc  memory_pool.cc  memory_pool.h  memory_scope.cc  memory_scope.h  memory_scope_test.cc  move.h  multipart_allocator.cc  multipart_allocator.h  multipart_allocator_test.cc  nb.gyp  nb_test.gyp  pointer_arithmetic.h  polymorphic_downcast.h  rect.h  ref_counted.cc  (+30 more)
remoting/: remoting_enable.gni
starboard/: .gitattributes  .gitignore  BUILD.gn  CHANGELOG.md  README.md  __init__.py  accessibility.h  atomic.h  audio_sink.h  blitter.h  byte_swap.h  character.h  condition_variable.h  configuration.h  configuration_constants.h  cpu_features.h  cryptography.h  decode_target.h  directory.h  double.h  drm.h  egl.h  event.h  export.h  feature_config.cc  feature_config.h  file.h  format_string.h  gles.h  image.h  input.h  key.h  log.h  media.h  memory.h  memory_reporter.h  microphone.h  mutex.h  once.h  player.h  (+26 more)
storage/: BUILD.gn
(+36395 files in other folders)
