[metadata]
name = cobalt

[tool:pytest]
norecursedirs=
  .*
  build
  buildtools
  cobalt/bindings
  cobalt/black_box_tests/tests
  cobalt/media_integration_tests
  cobalt/tools
  out
  starboard/sabi
  testing/android
  testing/gtest
  testing/gmock
  third_party
  tools/gyp
  tools/idl_parser
  tools/lbshell/coverage

# Ignore non-test files with test_* names that pytest would otherwise pick up.
addopts=
  --ignore-glob=**/test_filters.py
  --ignore-glob=**/test_filter.py
  --ignore-glob=**/test_runner.py
  --ignore-glob=**/test_env.py
