[metadata]
name = cobalt

[tool:pytest]
python_paths=.
norecursedirs=
  .*
  cobalt/black_box_tests/tests
  cobalt/media_integration_tests
  media
  out
  testing/android
  testing/gtest
  testing/gmock
  third_party

# Ignore non-test files with test_* names that pytest would otherwise pick up.
addopts=
  --ignore-glob=**/test_filters.py
  --ignore-glob=**/test_filter.py
  --ignore-glob=**/test_runner.py
  --ignore-glob=**/test_env.py
  --ignore-glob=build/**
