# Copyright 2021 The Cobalt Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

angle_has_build = true
angle_root = "//third_party/angle"

# Overrides for ANGLE's dependencies
angle_glslang_dir = ""
angle_googletest_dir = "//testing/gtest"
angle_libjpeg_turbo_dir = ""
angle_jsoncpp_dir = ""
angle_libpng_dir = ""
angle_spirv_cross_dir = ""
angle_spirv_tools_dir = ""
