// Copyright 2024 The Cobalt Authors. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

import("//build/config/chromeos/ui_mode.gni")
import("//build/config/python.gni")
import("//cobalt/build/config/base.gni")
import("//cobalt/build/testing/test.gni")

if (is_starboard) {
  import("//starboard/build/config/os_definitions.gni")
}

declare_args() {
  # Enables use of the v8-trap-handler, which uses signals to improve v8
  # performance. See v8/include/v8-wasm-trap-handler-posix.h
  # Currently it's only enabled for Linux desktop.
  cobalt_enable_v8_trap_handler = is_linux && target_cpu == "x64"
}

config("cobalt_config") {
  defines = []
  if (cobalt_enable_v8_trap_handler) {
    defines += [ "COBALT_ENABLE_V8_TRAP_HANDLER" ]
  }
}

static_library("cobalt") {
  sources = [ "app/cobalt.cc" ]
  deps = [
    ":common",
    "//starboard:starboard_group",
  ]
  public_deps = [ "//cobalt/browser" ]
}

if (is_starboard) {
  if (sb_is_evergreen && !sb_is_evergreen_compatible) {
    # This is only for Cobalt as a part of the Evergreen loader.
    # It does not include any Evergreen-specific code.
    static_library("cobalt_loader_executable") {
      sources = [ "app/cobalt.cc" ]
      deps = [
        ":common",
        "//starboard:starboard_group",
      ]
      public_deps = [ "//cobalt/browser" ]
    }
  }

  if (target_os == "android") {
    import("//build/config/android/rules.gni")

    generate_jni("cobalt_jni_headers") {
      sources = [ "android/java/src/org/chromium/cobalt/Cobalt.java" ]
    }

    android_library("cobalt_java") {
      sources = [
        "android/java/src/org/chromium/cobalt/Cobalt.java",
        "android/java/src/org/chromium/cobalt/CobaltActivity.java",
      ]
      deps = [
        "//base:base_java",
        "//third_party/androidx:androidx_annotation_annotation_java",
      ]
    }

    shared_library("cobalt_android") {
      sources = [ "android/cobalt_jni.cc" ]
      deps = [
        ":cobalt_jni_headers",
        ":common",
        "//cobalt/browser",
        "//starboard:starboard_group",
      ]
    }

    android_apk("cobalt_apk") {
      apk_name = "Cobalt"
      android_manifest = "android/AndroidManifest.xml"
      deps = [
        ":cobalt_android",
        ":cobalt_java",
      ]
    }
  }
}

if (use_evergreen) {
  copy("copy_cobalt_binary") {
    sources = [ "$root_out_dir/cobalt" ]
    outputs = [ "$root_out_dir/libcobalt.so" ]
    deps = [ ":cobalt" ]
  }

  if (is_linux) {
    import("//build/config/linux/strip_binary.gni")

    strip_binary("strip_cobalt_binary") {
      binary_input = "$root_out_dir/cobalt"
      deps = [ ":cobalt" ]
      testonly = true
    }
  }
}

source_set("common") {
  sources = [
    "app/cobalt_crash_reporter_client.cc",
    "app/cobalt_crash_reporter_client.h",
    "app/cobalt_main_delegate.cc",
    "app/cobalt_main_delegate.h",
    "app/cobalt_switch_defaults.cc",
    "app/cobalt_switch_defaults.h",
  ]

  if (is_starboard) {
    sources += [
      "app/app_event_delegate.cc",
      "app/app_event_delegate.h",
      "app/app_event_runner.cc",
      "app/app_event_runner.h",
      "app/cobalt_switch_defaults_starboard.cc",
      "app/cobalt_switch_defaults_starboard.h",
    ]
  } else if (is_ios && target_platform == "tvos") {
    sources += [ "app/cobalt_switch_defaults_tvos.cc" ]
  }

  if (use_evergreen) {
    sources += [
      "browser/loader_app_metrics.cc",
      "browser/loader_app_metrics.h",
    ]
  }

  public_deps = [
    "//base",
    "//cobalt/browser:switches",
    "//cobalt/browser/h5vcc_runtime",
    "//components/crash/core/common",
    "//content/public/app",
    "//starboard:starboard_group",
  ]

  if (cobalt_enable_v8_trap_handler) {
    deps = [ "//v8:v8_headers" ]
  }
}

test("cobalt_unittests") {
  testonly = true
  sources = []

  if (is_starboard) {
    sources += [
      "//cobalt/app/app_event_delegate_unittest.cc",
      "//cobalt/app/app_event_runner_unittest.cc",
      "//cobalt/app/cobalt_switch_defaults_starboard_test.cc",
      "//cobalt/shell/common/device_authentication_test.cc",
    ]
  }

  deps = [
    ":common",
    "//base/test:test_support",
    "//cobalt/browser",
    "//cobalt/browser:cobalt_crash_annotations",
    "//cobalt/browser:command_line_logger",
    "//cobalt/browser:global_features",
    "//cobalt/browser:metrics",
    "//cobalt/browser/client_hint_headers",
    "//cobalt/browser/constants:cobalt_experiment_names",
    "//cobalt/browser/h5vcc_metrics/public/mojom",
    "//cobalt/browser/h5vcc_runtime",
    "//cobalt/browser/h5vcc_runtime:deep_link_manager",
    "//cobalt/browser/user_agent",
    "//cobalt/common/libc:libc_test",
    "//cobalt/shell/browser",
    "//cobalt/shell/browser:test_support",
    "//cobalt/shell/browser/migrate_storage_record:unittest",
    "//components/metrics",
    "//components/metrics:test_support",
    "//components/prefs",
    "//components/prefs:test_support",
    "//components/variations",
    "//components/variations/service",
    "//content/test:test_support",
    "//media:test_support",
    "//mojo/core/embedder",
    "//mojo/core/test:run_all_unittests",
    "//net/traffic_annotation:test_support",
    "//services/network/public/cpp",
    "//testing/gmock",
    "//testing/gtest",
  ]
}
