# Copyright 2015 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/chrome_exclude.gni")
import("//build/config/linux/gtk/gtk.gni")
import("//build/config/ui.gni")

if (is_ios) {
  import("//build/config/ios/ios_sdk.gni")
}

declare_args() {
  enable_remoting = !exclude_chrome_build && !is_cast_android &&
                    (!is_linux || (target_cpu != "arm64" && use_gtk))
}
